Use string.formatted, math clamp, conform item cast