@@ -115,7 +115,7 @@ public class RayReceiverTileEntity extends TileEntity implements ITickable {
         }
 
         public void setEnergyStored(int energy) {
-            this.energy = Math.max(0, Math.min(capacity, energy));
+            this.energy = Math.clamp(energy, 0, capacity);
         }
     }
 
